@@ -1,3 +1,5 @@
+   o Clean up Makefile.PL
+
 Version 0.71_03 --  28 Apr 2011 <bobtfish@bobtfish.net>
    o Remove support for sfio which is an optional (and not enabled by default)
      compile option to perl that is never used.
